Support: Prevent ratings chart counts from wrapping at certain viewport widths.
Props nidhidhandhuk, pitamdey, coffee2code.
Fixes #7400.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13394 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
@@ -1329,8 +1329,7 @@ div.bbp-breadcrumb {
 		.col-3 {
 			font-size: ms(-2);
 			margin: 0;
-			width: 35%;
-			float: none;
+			min-width: 40%;
 			border-top: 1px solid #eee;
 
 			.reviews-total-count {
@@ -1341,10 +1340,10 @@ div.bbp-breadcrumb {
 		}
 
 		.col-5 {
-			margin: 0 5% 10px 0;
-			width: 60%;
+			margin: 0 0 10px 0;
+			padding-right: 10px;
 			font-size: ms(-2);
-			float: none;
+			min-width: 54%;
 
 			> div:first-child {
 
